--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
 		<option value="brooklyn">Brooklyn</option>
 		<option value="manhattan">Manhattan</option>
 		<option value="queens">Queens</option>
-		<option value="staten_island">Staten Island</option>
+		<option value="staten island">Staten Island</option>
 	</select><br />
 	Password: <input type="password" name="password"><br />
 	Password Confirmation: <input type="password" name="confirm_password"><br />
