--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-</head>
-<body>
-<h1>Sign In</h1>
+<% include ./partials/head %>
+<div class="container">
+<div class="login">
+<div class="row">
+	<div class="col-md-6">
+<h1>Login</h1>
 <form action="/session?_method=POST" method="POST">
 	Username: <input type="text" name="username"><br />
 	Password: <input type="password" name="password"><br />
-	<button>Sign In</button>
+	<button class="btn btn-primary">Login</button>
 </form>
+</div>
+</div>
+</div>
 <br /><br />
+<div class="registeration">
+<div class="row">
+	<div class="col-md-6">
 <h1>Create a User</h1><br />
 <form action="/user?_method=POST" method="POST">
 	Username: <input type="text" name="username"><br />
@@ -24,7 +29,10 @@
 	</select><br />
 	Password: <input type="password" name="password"><br />
 	Password Confirmation: <input type="password" name="confirm_password"><br />
-	<button>Sign Up</button>
+	<button class="btn btn-primary">Sign Up</button>
 </form>
-</body>
-</html>
+</div>
+</div>
+</div>
+</div>
+<% include ./partials/footer %>
