--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,6 @@
 		<div class="col-md-6">
 		<% events.forEach(function(event){ %>
 			<div>
-
 				<h3><%= event.event_name %></h3>
 				<h4><%= event.start_date_time %>, <%= event.end_date_time %>, <%= event.event_borough %></h4>
 					<%= event.event_type %><br /><br />
@@ -19,9 +18,19 @@
 
 	
 		<!-- Think about moving these two into the show details -->
-							<form action="/create?_method=POST" method="POST" >
+							<form action="/create" method="POST" >
+								<div class="form-group">
+								<input type="hidden" name="event_name" value="<%= event.event_name %>">
+								<input type="hidden" name="start_date_time" value="<%= event.start_date_time %>">
+								<input type="hidden" name="end_date_time" value="<%= event.end_date_time %>">
+								<input type="hidden" name="event_type" value="<%= event.event_type %>">
+								<input type="hidden" name="event_location" value="<%= event.event_location %>">
+								<input type="hidden" name="event_borough" value="<%= event.event_borough %>">
+								<input type="hidden" name="street_closure" value="<%= event.street_closure_type %>">
+
 								<button class="btn btn-primary" id="save-button" >Save</button>
 								<button class="btn btn-primary" id="directions">Directions</button>
+								</div>
 							</form>
 							
    		    </div><br />
