--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,17 +8,16 @@
 				<h3><%= event.event_name %></h3>
 				<h4><%= event.start_date_time %>, <%= event.end_date_time %>, <%= event.event_borough %></h4>
 					<%= event.event_type %><br /><br />
-	<!-- Need all events to show up right now only 10 is showing pagination API -->
-	<!-- Need to render HTML events.desc -->
+
+	   <!-- Show more details toggle -->
 					<a class = "show-details" id = "show-details-<%= event.event_id %>" href="#">Show Details</a>
 						<div id="desc<%= event.event_id %>" style="display: none">
 							<%= event.event_location %><br />
 							<%= event.street_closure_type %>
 						</div><br />
 
-	
-		<!-- Think about moving these two into the show details -->
-							<form action="/create" method="POST" >
+						<!-- SAVE EVENTS -->
+							<form action="/events" method="POST" >
 								<div class="form-group">
 								<input type="hidden" name="event_name" value="<%= event.event_name %>">
 								<input type="hidden" name="start_date_time" value="<%= event.start_date_time %>">
@@ -26,7 +25,7 @@
 								<input type="hidden" name="event_type" value="<%= event.event_type %>">
 								<input type="hidden" name="event_location" value="<%= event.event_location %>">
 								<input type="hidden" name="event_borough" value="<%= event.event_borough %>">
-								<input type="hidden" name="street_closure" value="<%= event.street_closure_type %>">
+								<input type="hidden" name="street_closure_type" value="<%= event.street_closure_type %>">
 
 								<button class="btn btn-primary" id="save-button" >Save</button>
 								<button class="btn btn-primary" id="directions">Directions</button>
