--- a/views/user_events.ejs
+++ b/views/user_events.ejs
@@ -18,7 +18,7 @@
 
 							   <form method="POST" action="/user/events?_method=DELETE" >
 								   <div class="form-group">
-								<input type="hidden" name="event_id" value="<%= user_events[i].event_id %>">
+								<input type="hidden" name="event_id" value="<%= user_events[i].id %>">
 
 								<button class="btn btn-primary" id="delete-button" >Delete</button>
 								<button class="btn btn-primary" id="directions">Directions</button>
