--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,11 +28,11 @@
 								<input type="hidden" name="street_closure_type" value="<%= event.street_closure_type %>">
 
 								<button class="btn btn-primary" id="save-button" >Save</button>
-								<button class="btn btn-primary" id="directions">Directions</button>
+								<!--<button class="btn btn-primary" id="directions">Directions</button> -->
 								</div>
 							</form>
 							
-   		    </div><br />
+   		    </dsiv><br />
 	
 <% }) %>
 	</div>
