--- a/views/user_events.ejs
+++ b/views/user_events.ejs
@@ -21,7 +21,7 @@
 								<input type="hidden" name="event_id" value="<%= user_events[i].id %>">
 
 								<button class="btn btn-primary" id="delete-button" >Delete</button>
-								<button class="btn btn-primary" id="directions">Directions</button>
+								<!--<button class="btn btn-primary" id="directions">Directions</button> -->
 								</div>
 							  </form>
 						</div><br />
