--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -30,7 +30,7 @@
 						<li><a href="/user/events">My Events</a></li>
 						<li><a href="/login">Login</a></li>
 					</ul>
-					<form action="/search?_method=POST" method="POST" class="navbar-form navbar-right" role="search">
+					<form method="POST" action="/search" class="navbar-form navbar-right" role="search">
 						<div class="form-group">
 							<input type="text" name="borough" id="search" class="form-control" placeholder="Search by Borough">
 						</div>
